@@ -31,9 +31,7 @@ import org.elasticsearch.index.shard.IndexShardState;
 import org.elasticsearch.index.shard.ShardId;
 import org.elasticsearch.indices.cluster.IndicesClusterStateService.AllocatedIndices.IndexRemovalReason;
 
-import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 
 /**
@@ -50,7 +48,7 @@ final class CompositeIndexEventListener implements IndexEventListener {
                 throw new IllegalArgumentException("listeners must be non-null");
             }
         }
-        this.listeners = Collections.unmodifiableList(new ArrayList<>(listeners));
+        this.listeners = List.copyOf(listeners);
         this.logger = Loggers.getLogger(getClass(), indexSettings.getIndex());
     }
 
@@ -60,7 +58,8 @@ final class CompositeIndexEventListener implements IndexEventListener {
             try {
                 listener.shardRoutingChanged(indexShard, oldRouting, newRouting);
             } catch (Exception e) {
-                logger.warn(() -> new ParameterizedMessage("[{}] failed to invoke shard touring changed callback", indexShard.shardId().getId()), e);
+                logger.warn(() -> new ParameterizedMessage("[{}] failed to invoke shard touring changed callback",
+                    indexShard.shardId().getId()), e);
             }
         }
     }
@@ -71,7 +70,8 @@ final class CompositeIndexEventListener implements IndexEventListener {
             try {
                 listener.afterIndexShardCreated(indexShard);
             } catch (Exception e) {
-                logger.warn(() -> new ParameterizedMessage("[{}] failed to invoke after shard created callback", indexShard.shardId().getId()), e);
+                logger.warn(() -> new ParameterizedMessage("[{}] failed to invoke after shard created callback",
+                    indexShard.shardId().getId()), e);
                 throw e;
             }
         }
@@ -83,7 +83,8 @@ final class CompositeIndexEventListener implements IndexEventListener {
             try {
                 listener.afterIndexShardStarted(indexShard);
             } catch (Exception e) {
-                logger.warn(() -> new ParameterizedMessage("[{}] failed to invoke after shard started callback", indexShard.shardId().getId()), e);
+                logger.warn(() -> new ParameterizedMessage("[{}] failed to invoke after shard started callback",
+                    indexShard.shardId().getId()), e);
                 throw e;
             }
         }
@@ -96,7 +97,8 @@ final class CompositeIndexEventListener implements IndexEventListener {
             try {
                 listener.beforeIndexShardClosed(shardId, indexShard, indexSettings);
             } catch (Exception e) {
-                logger.warn(() -> new ParameterizedMessage("[{}] failed to invoke before shard closed callback", shardId.getId()), e);
+                logger.warn(() -> new ParameterizedMessage("[{}] failed to invoke before shard closed callback",
+                    shardId.getId()), e);
                 throw e;
             }
         }
@@ -109,7 +111,8 @@ final class CompositeIndexEventListener implements IndexEventListener {
             try {
                 listener.afterIndexShardClosed(shardId, indexShard, indexSettings);
             } catch (Exception e) {
-                logger.warn(() -> new ParameterizedMessage("[{}] failed to invoke after shard closed callback", shardId.getId()), e);
+                logger.warn(() -> new ParameterizedMessage("[{}] failed to invoke after shard closed callback",
+                    shardId.getId()), e);
                 throw e;
             }
         }
@@ -121,19 +124,22 @@ final class CompositeIndexEventListener implements IndexEventListener {
             try {
                 listener.onShardInactive(indexShard);
             } catch (Exception e) {
-                logger.warn(() -> new ParameterizedMessage("[{}] failed to invoke on shard inactive callback", indexShard.shardId().getId()), e);
+                logger.warn(() -> new ParameterizedMessage("[{}] failed to invoke on shard inactive callback",
+                    indexShard.shardId().getId()), e);
                 throw e;
             }
         }
     }
 
     @Override
-    public void indexShardStateChanged(IndexShard indexShard, @Nullable IndexShardState previousState, IndexShardState currentState, @Nullable String reason) {
+    public void indexShardStateChanged(IndexShard indexShard, @Nullable IndexShardState previousState, IndexShardState currentState,
+                                       @Nullable String reason) {
         for (IndexEventListener listener : listeners) {
             try {
                 listener.indexShardStateChanged(indexShard, previousState, indexShard.state(), reason);
             } catch (Exception e) {
-                logger.warn(() -> new ParameterizedMessage("[{}] failed to invoke index shard state changed callback", indexShard.shardId().getId()), e);
+                logger.warn(() -> new ParameterizedMessage("[{}] failed to invoke index shard state changed callback",
+                    indexShard.shardId().getId()), e);
                 throw e;
             }
         }
@@ -169,7 +175,8 @@ final class CompositeIndexEventListener implements IndexEventListener {
             try {
                 listener.beforeIndexShardCreated(shardId, indexSettings);
             } catch (Exception e) {
-                logger.warn(() -> new ParameterizedMessage("[{}] failed to invoke before shard created callback", shardId), e);
+                logger.warn(() ->
+                    new ParameterizedMessage("[{}] failed to invoke before shard created callback", shardId), e);
                 throw e;
             }
         }
@@ -206,7 +213,8 @@ final class CompositeIndexEventListener implements IndexEventListener {
             try {
                 listener.beforeIndexShardDeleted(shardId, indexSettings);
             } catch (Exception e) {
-                logger.warn(() -> new ParameterizedMessage("[{}] failed to invoke before shard deleted callback", shardId.getId()), e);
+                logger.warn(() -> new ParameterizedMessage("[{}] failed to invoke before shard deleted callback",
+                    shardId.getId()), e);
                 throw e;
             }
         }
@@ -219,7 +227,8 @@ final class CompositeIndexEventListener implements IndexEventListener {
             try {
                 listener.afterIndexShardDeleted(shardId, indexSettings);
             } catch (Exception e) {
-                logger.warn(() -> new ParameterizedMessage("[{}] failed to invoke after shard deleted callback", shardId.getId()), e);
+                logger.warn(() -> new ParameterizedMessage("[{}] failed to invoke after shard deleted callback",
+                    shardId.getId()), e);
                 throw e;
             }
         }
@@ -232,6 +241,18 @@ final class CompositeIndexEventListener implements IndexEventListener {
                 listener.beforeIndexAddedToCluster(index, indexSettings);
             } catch (Exception e) {
                 logger.warn("failed to invoke before index added to cluster callback", e);
+                throw e;
+            }
+        }
+    }
+
+    @Override
+    public void onStoreCreated(ShardId shardId) {
+        for (IndexEventListener listener : listeners) {
+            try {
+                listener.onStoreCreated(shardId);
+            } catch (Exception e) {
+                logger.warn("failed to invoke on store created", e);
                 throw e;
             }
         }
