@@ -6,8 +6,8 @@
 
 package org.elasticsearch.xpack.security.authc.kerberos;
 
-import org.apache.logging.log4j.Logger;
 import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
 import org.elasticsearch.ExceptionsHelper;
 import org.elasticsearch.action.ActionListener;
 import org.elasticsearch.common.collect.Tuple;
@@ -17,20 +17,19 @@ import org.ietf.jgss.GSSException;
 import org.ietf.jgss.GSSManager;
 import org.ietf.jgss.Oid;
 
+import javax.security.auth.Subject;
+import javax.security.auth.login.AppConfigurationEntry;
+import javax.security.auth.login.Configuration;
+import javax.security.auth.login.LoginContext;
+import javax.security.auth.login.LoginException;
+
 import java.nio.file.Path;
 import java.security.AccessController;
 import java.security.PrivilegedActionException;
 import java.security.PrivilegedExceptionAction;
 import java.util.Base64;
 import java.util.Collections;
-import java.util.HashMap;
 import java.util.Map;
-
-import javax.security.auth.Subject;
-import javax.security.auth.login.AppConfigurationEntry;
-import javax.security.auth.login.Configuration;
-import javax.security.auth.login.LoginContext;
-import javax.security.auth.login.LoginException;
 
 /**
  * Utility class that validates kerberos ticket for peer authentication.
@@ -41,12 +40,14 @@ import javax.security.auth.login.LoginException;
  * It may respond with token which needs to be communicated with the peer.
  */
 public class KerberosTicketValidator {
-    static final Oid SPNEGO_OID = getSpnegoOid();
+    static final Oid SPNEGO_OID = getOid("1.3.6.1.5.5.2");
+    static final Oid KERBEROS_V5_OID = getOid("1.2.840.113554.1.2.2");
+    static final Oid[] SUPPORTED_OIDS = new Oid[] { SPNEGO_OID, KERBEROS_V5_OID };
 
-    private static Oid getSpnegoOid() {
+    private static Oid getOid(final String id) {
         Oid oid = null;
         try {
-            oid = new Oid("1.3.6.1.5.5.2");
+            oid = new Oid(id);
         } catch (GSSException gsse) {
             throw ExceptionsHelper.convertToRuntime(gsse);
         }
@@ -152,7 +153,7 @@ public class KerberosTicketValidator {
      */
     private static GSSCredential createCredentials(final GSSManager gssManager, final Subject subject) throws PrivilegedActionException {
         return doAsWrapper(subject, (PrivilegedExceptionAction<GSSCredential>) () -> gssManager.createCredential(null,
-                GSSCredential.DEFAULT_LIFETIME, SPNEGO_OID, GSSCredential.ACCEPT_ONLY));
+                GSSCredential.DEFAULT_LIFETIME, SUPPORTED_OIDS, GSSCredential.ACCEPT_ONLY));
     }
 
     /**
@@ -252,21 +253,18 @@ public class KerberosTicketValidator {
 
         @Override
         public AppConfigurationEntry[] getAppConfigurationEntry(final String name) {
-            final Map<String, String> options = new HashMap<>();
-            options.put("keyTab", keytabFilePath);
-            /*
-             * As acceptor, we can have multiple SPNs, we do not want to use particular
-             * principal so it uses "*"
-             */
-            options.put("principal", "*");
-            options.put("useKeyTab", Boolean.TRUE.toString());
-            options.put("storeKey", Boolean.TRUE.toString());
-            options.put("doNotPrompt", Boolean.TRUE.toString());
-            options.put("isInitiator", Boolean.FALSE.toString());
-            options.put("debug", Boolean.toString(krbDebug));
-
-            return new AppConfigurationEntry[] { new AppConfigurationEntry(SUN_KRB5_LOGIN_MODULE,
-                    AppConfigurationEntry.LoginModuleControlFlag.REQUIRED, Collections.unmodifiableMap(options)) };
+            return new AppConfigurationEntry[]{new AppConfigurationEntry(
+                    SUN_KRB5_LOGIN_MODULE,
+                    AppConfigurationEntry.LoginModuleControlFlag.REQUIRED,
+                    Map.of(
+                            "keyTab", keytabFilePath,
+                            // as acceptor, we can have multiple SPNs, we do not want to use any particular principal so it uses "*"
+                            "principal", "*",
+                            "useKeyTab", Boolean.TRUE.toString(),
+                            "storeKey", Boolean.TRUE.toString(),
+                            "doNotPrompt", Boolean.TRUE.toString(),
+                            "isInitiator", Boolean.FALSE.toString(),
+                            "debug", Boolean.toString(krbDebug)))};
         }
 
     }
